--- a/operario.html
+++ b/operario.html
@@ -45,7 +45,10 @@
             <form id="salidaForm" class="grid-form">
                 <input id="salPlaca" placeholder="Placa" required />
                 <button class="btn" type="submit">Buscar y generar cobro</button>
+                <button id="btnImprimirTicket" class="btn" style="background-color: #3A7AFE;">Imprimir Ticket</button>
             </form>
+
+            
 
             <!-- <button id="btnGenerarTicket" class="btn secondary" style="margin-top:10px;">
                 Generar Ticket
