Cambio en styles.css

--- a/operario.html
+++ b/operario.html
@@ -44,7 +44,7 @@
 
             <form id="salidaForm" class="grid-form">
                 <input id="salPlaca" placeholder="Placa" required />
-                <button class="btn" type="submit">Buscar y generar cobro</button>
+                <button class="btn" type="submit" style="background-color: #1b9aaa;">Buscar y generar cobro</button>
                 <button id="btnImprimirTicket" class="btn" style="background-color: #3A7AFE;">Imprimir Ticket</button>
             </form>
 
