--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                 <button class="btn primary login-btn" type="submit">Iniciar sesión</button>
             </form>
 
+                        <div id="loginError" class="muted small" style="color:red; margin-top:8px;"></div>
+
             <div class="small muted login-demo-msg">
                 Puedes iniciar como <strong>Administrador</strong> o <strong>Operario</strong>.
             </div>
