--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="page-auth">
     <main class="auth-container">
         <div class="auth-card login-card">
-            <h1 class="brand">Parqueadero...</h1>
+            <h1 class="brand">Parqueadero</h1>
             <p class="muted">Inicia sesión con tus credenciales</p>
 
             <form id="loginForm" class="login-form" novalidate>
